--- a/templates/mysite/content_list.html
+++ b/templates/mysite/content_list.html
@@ -1,5 +1,7 @@
 
 <!DOCTYPE html>
+{% extends 'base.html' %}
+{% block content %}
 {% load static %}
 <html lang="ko">
     <head>
@@ -15,21 +17,6 @@
         <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
     </head>
     <body>
-        <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container px-5">
-                <a class="navbar-brand" href="#!">Start Bootstrap</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Services</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
         <!-- Page Content-->
         <div class="container px-4 px-lg-5">
             <!-- Heading Row-->
@@ -39,8 +26,8 @@
                         <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="https://dummyimage.com/900x400/dee2e6/6c757d.jpg" alt="..." /></div>
                         <div class="col-lg-5">
                             <h1 class="font-weight-light">{{ content.title }}</h1>
-                            <p>{{ content.content}}</p>
-                            <a class="btn btn-primary" href="#!">Call to Action!</a>
+                            <p>{{ content.content | truncatewords:30}}</p>
+                            <a class="btn btn-primary" href="{% url 'detail' content.id %}">상품 상세보기</a>
                         </div>
                      </div>
                 {% endfor %}
@@ -83,9 +70,6 @@
                 </div>
             </div>
         </div>
-        <!-- Footer-->
-        <footer class="py-5 bg-dark">
-            <div class="container px-4 px-lg-5"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
-        </footer>
+        {% endblock %}
     </body>
 </html>
