--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
 {% extends "base.html" %}
+
 {% block content %}
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+
 {% if form.errors %}
 <p>아이디 또는 비밀번호가 틀립니다. 다시 시도해주세요.</p>
 {% endif %}
@@ -24,8 +19,7 @@
 </tr>
 </table>
 
-    <input type="submit" value="login">
+<input type="submit" value="login">
 </form>
+<a href="{% url 'accounts:signup' %}">signup</a>
 {% endblock %}
-</body>
-</html>
